--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,6 +8,7 @@ description: Demonstrates how to use the appavailability plugin.
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
 version: 1.0.0+1
+publish_to: none
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -17,7 +18,7 @@ dependencies:
     sdk: flutter
 
   flutter_appavailability:
-      path: ../
+    path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
